final version of website

--- a/docs/source/modelselection.ipynb
+++ b/docs/source/modelselection.ipynb
@@ -56,8 +56,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intuitions concerning classifier selection\n",
-    "\n",
     "Usually classifier's performance depends on three elements:\n",
     "\n",
     "- number of samples\n",
@@ -149,6 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Intutions\n",
+    "\n",
     "### Generalization quality measures\n",
     "\n",
     "\n",
@@ -205,19 +205,198 @@
     "\n",
     "Scikit-multilearn provides 11 classifiers that allow a strong variety of classification scenarios through label partitioning and ensemble classification, let's look at the important factors influencing performance. $ g(x) $ denotes the performance of the base classifier in some of the classifiers.\n",
     "\n",
+    "<dl>\n",
+    "<dt>[BRkNNaClassifier](api/skmultilearn.adapt.brknn.html#skmultilearn.adapt.brknn.BRkNNaClassifier), [BRkNNbClassifier](api/skmultilearn.adapt.brknn.html#skmultilearn.adapt.brknn.BRkNNbClassifier)</dt>\n",
+    "<dd>\n",
     "\n",
-    "Classifier | Parameter estimation needed | Parameter count | Train complexity | Description \n",
-    "--- | --- | --- | --- | --- \n",
-    "[BRkNNaClassifier](api/skmultilearn.adapt.brknn.html#skmultilearn.adapt.brknn.BRkNNaClassifier), [BRkNNbClassifier](api/skmultilearn.adapt.brknn.html#skmultilearn.adapt.brknn.BRkNNbClassifier)| Yes | 1 | $ O(n_{labels} * n_{samples} * n_{features} * k) $ | BRkNN classifiers train a k Nearest Neighbor per label and use infer label assignment in one of the two variants.  <br /> **Strong sides**: takes some label relations into account while estimating single-label classifers. Works when distance between samples is a good predictor for label assignment. Often used in biosciences. <br />**Weak sides**: trains a classifier per label, less suitable for large label space, requires parameter estimation.\n",
-    "[MLkNN](api/skmultilearn.adapt.mlknn.html#multilabel-k-nearest-neighbours) | Yes | 1 | $ O((n_{samples} * n_{features} + n_{labels}) * k) $ | MLkNN builds uses k-NearestNeighbors find nearest examples to a test class and uses Bayesian inference to select assigned labels. <br /> **Strong sides**: estimates one multi-class subclassifier. Works when distance between samples is a good predictor for label assignment. Often used in biosciences. <br /> **Weak sides**: requires parameter estimation.\n",
-    "[MLARAM](api/skmultilearn.adapt.mlaram.html) | Yes | 2 | $ O(n_{samples})  $ | An ART classifier which uses clustering of learned prototypes into large clusters improve performance. <br /> **Strong sides**: linear in number of samples, scales well <br /> **Weak sides**: requires parameter estimation for 2 parameters, ART techniques have had generalization limits in the past. \n",
-    "[BinaryRelevance](api/skmultilearn.problem_transform.br.html#skmultilearn.problem_transform.BinaryRelevance) | only for base classifier | depends on base classifier | $O(n_{labels}*g(x))$  | Transforms a multi-label classification problem with L labels into L single-label separate binary classification problems.  <br /> **Strong sides**: estimates single-label classifiers well <br /> **Weak sides**: not suitable for large number of labels, ignores label relations\n",
-    "[ClassifierChain](api/skmultilearn.problem_transform.cc.html#skmultilearn.problem_transform.ClassifierChain) | depends on base classifier | 1 + base classifier's parameters | $O(n_{labels}*g(x))$ |  Transforms a multi-label classification problem with L labels into L single-label separate binary classification which are ordered in a Bayesian chain where next classifier learns from label assignmens of previous classifiers. <br /> **Strong sides**: estimates label dependencies. <br /> **Weak sides**: not suitable for large number of labels, quite unstable - quality strongly depends on the label ordering in chain. \n",
-    "[LabelPowerset](api/skmultilearn.problem_transform.lp.html#skmultilearn.problem_transform.LabelPowerset) | only for base classifier | 0 | $ O(n_{label\\_combinations}*g(x)) $ | Transforms multi-label problem to a multi-class problem where each label combination is a separate class. <br /> **Strong sides**: estimates label dependencies, with only one classifier<br/> **Weak sides**: requires all label combinations predictable by the classifier to be present in the training data\n",
-    "[RakelD](api/skmultilearn.ensemble.rakeld.html#skmultilearn.ensemble.RakelD) | Yes | 1 | $O(n_{partitions}*g(x))$ | Randomly partitions label space and trains a base classifier per partition. <br /> **Strong sides**: may use less classifiers than Binary Relevance and still generalize label relations while not underfitting like LabelPowerset<br /> **Weak sides**: using random approach is not very probable to draw an optimal label space division\n",
-    "[RakelO](api/skmultilearn.ensemble.rakelo.html#skmultilearn.ensemble.RakelO) | Yes | 2 | $O(n_{partitions}*g(x))$ | Randomly divides label space into overlapping subspaces and trains a base classifier per subspace. Unifies results with voting. <br /> **Strong sides**: may provide better results with overlapping models  <br /> **Weak sides**: takes large number of classifiers to generate improvement, not very scalable, random subspaces may not be optimal\n",
-    "[LabelSpacePartitioningClassifier](api/skmultilearn.ensemble.partition.html#skmultilearn.ensemble.LabelSpacePartitioningClassifier) | only for base classifier | 1 | $O(n_{partitions}*g(x))$ | Uses clustering methods to partition the label space and train a base classifier per partition. <br /> **Strong sides**: accomodates to different types of problems, infers when to divide into subproblems or not and knows when to use less classifiers than Binary Relevance, scalable to data sets with large numbers of labels, generalizes label relations well while not underfitting like LabelPowerset, does not require parameter estimation <br /> **Weak sides**:  requires label relationships present in training data to be representable of the problem\n",
-    "[MajorityVotingClassifier](api/skmultilearn.ensemble.voting.html#skmultilearn.ensemble.MajorityVotingClassifier) | only for base classifier | 1 | $O(n_{partitions}*g(x))$ | Uses clustering methods to divide the label space into possibly overlapping subproblems and trains a base classifier per subproblem, unifies results via voting. <br /> **Strong sides**: accomodates to different types of problems, infers when to divide into subproblems or not and knows when to use less classifiers than Binary Relevance, scalable to data sets with large numbers of labels, generalizes label relations well while not underfitting like LabelPowerset, does not require parameter estimation <br /> **Weak sides**:  requires label relationships present in training data to be representable of the problem\n"
+    "**Parameter estimation needed**:  Yes, 1 parameter\n",
+    "    \n",
+    "**Complexity**: ``O(n_{labels} * n_{samples} * n_{features} * k)``\n",
+    "\n",
+    "BRkNN classifiers train a k Nearest Neighbor per label and use infer label assignment in one of the two variants.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- takes some label relations into account while estimating single-label classifers\n",
+    "- works when distance between samples is a good predictor for label assignment. Often used in biosciences. \n",
+    "\n",
+    "**Weak sides**: \n",
+    "- trains a classifier per label\n",
+    "- less suitable for large label space\n",
+    "- requires parameter estimation.\n",
+    "</dd>\n",
+    "<dt>[MLkNN](api/skmultilearn.adapt.mlknn.html#multilabel-k-nearest-neighbours)</dt>   \n",
+    "<dd>\n",
+    "**Parameter estimation needed**:  Yes, 2 parameters\n",
+    "\n",
+    "**Complexity**: ``O((n_{samples} * n_{features} + n_{labels}) * k)``\n",
+    "\n",
+    "MLkNN builds uses k-NearestNeighbors find nearest examples to a test class and uses Bayesian inference to select assigned labels.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- estimates one multi-class subclassifier\n",
+    "- works when distance between samples is a good predictor for label assignment\n",
+    "- often used in biosciences.\n",
+    "\n",
+    "**Weak sides**: \n",
+    "- requires parameter estimation\n",
+    "</dd>\n",
+    "\n",
+    "<dt>[MLARAM](api/skmultilearn.adapt.mlaram.html)</dt>\n",
+    "<dd>\n",
+    "**Parameter estimation needed**:  Yes, 2 parameters\n",
+    "\n",
+    "**Complexity**: ``O(n_{samples})``\n",
+    "\n",
+    "An ART classifier which uses clustering of learned prototypes into large clusters improve performance.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- linear in number of samples, scales well\n",
+    "\n",
+    "**Weak sides**: \n",
+    "- requires parameter estimation\n",
+    "- ART techniques have had generalization limits in the past\n",
+    "\n",
+    "</dd>\n",
+    "<dt>[BinaryRelevance](api/skmultilearn.problem_transform.br.html#skmultilearn.problem_transform.BinaryRelevance)</dt>\n",
+    "<dd>\n",
+    "**Parameter estimation needed**:  Only for base classifier\n",
+    "\n",
+    "**Complexity**: ``O(n_{labels} * base_single_class_classifier_complexity)``\n",
+    "\n",
+    "Transforms a multi-label classification problem with L labels into L single-label separate binary classification problems.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- estimates single-label classifiers\n",
+    "- can generalize beyond avialable label combinations\n",
+    "\n",
+    "**Weak sides**: \n",
+    "- not suitable for large number of labels\n",
+    "- ignores label relations\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "<dt>[ClassifierChain](api/skmultilearn.problem_transform.cc.html#skmultilearn.problem_transform.ClassifierChain)</dt>\n",
+    "<dd>\n",
+    "**Parameter estimation needed**:  Yes, 1 + parameters for base classifier\n",
+    "\n",
+    "**Complexity**: ``O(n_{labels} * base_single_class_classifier_complexity)``\n",
+    "\n",
+    "Transforms multi-label problem to a multi-class problem where each label combination is a separate class.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- estimates single-label classifiers\n",
+    "- can generalize beyond avialable label combinations\n",
+    "- takes label relations into account\n",
+    "\n",
+    "**Weak sides**: \n",
+    "- not suitable for large number of labels\n",
+    "- quality strongly depends on the label ordering in chain. \n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "<dt>[LabelPowerset](api/skmultilearn.problem_transform.lp.html#skmultilearn.problem_transform.LabelPowerset)</dt>\n",
+    "<dd>\n",
+    "**Parameter estimation needed**:  Only for base classifier\n",
+    "\n",
+    "**Complexity**: ``O(base_multi_class_classifier_complexity(n_classes = n_label_combinations))``\n",
+    "\n",
+    "Transforms multi-label problem to a multi-class problem where each label combination is a separate class and uses a multi-class classifier to solve the problem.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "- estimates label dependencies, with only one classifier\n",
+    "- often best solution for subset accuracy if training data contains all relevant label combinations\n",
+    "\n",
+    "**Weak sides**: \n",
+    "- requires all label combinations predictable by the classifier to be present in the training data\n",
+    "- very prone to underfitting with large label spaces\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "<dt>[RakelD](api/skmultilearn.ensemble.rakeld.html#skmultilearn.ensemble.RakelD)</dt>\n",
+    "<dd>\n",
+    "\n",
+    "**Parameter estimation needed**:  Yes, 1 + base classifier's parameters\n",
+    "**Complexity**: ``O(n_{partitions} * base_multi_class_classifier_complexity(n_classes = n_label_combinations_per_partition))``\n",
+    "\n",
+    "Randomly partitions label space and trains a Label Powerset classifier per partition with a base multi-class classifier.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "\n",
+    "- may use less classifiers than Binary Relevance and still generalize label relations while not underfitting like LabelPowerset\n",
+    "\n",
+    "**Weak sides**: \n",
+    "\n",
+    "- using random approach is not very probable to draw an optimal label space division\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "\n",
+    "<dt>[RakelO](api/skmultilearn.ensemble.rakeld.html#skmultilearn.ensemble.RakelO)</dt>\n",
+    "<dd>\n",
+    "\n",
+    "**Parameter estimation needed**:  Yes, 2 + base classifier's parameters\n",
+    "**Complexity**: ``O(n_{partitions} * base_multi_class_classifier_complexity(n_classes = n_label_combinations_per_cluster))``\n",
+    "\n",
+    "Randomly draw label subspaces (possibly overlapping) and trains a Label Powerset classifier per partition with a base multi-class classifier, labels are assigned based on voting.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "\n",
+    "- may provide better results with overlapping models\n",
+    "\n",
+    "**Weak sides**: \n",
+    "\n",
+    "- takes large number of classifiers to generate improvement, not scalable\n",
+    "- random subspaces may not be optimal\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "\n",
+    "<dt>[LabelSpacePartitioningClassifier](api/skmultilearn.ensemble.partition.html#skmultilearn.ensemble.LabelSpacePartitioningClassifier)</dt>\n",
+    "<dd>\n",
+    "\n",
+    "**Parameter estimation needed**:  Only base classifier\n",
+    "**Complexity**: ``O(n_{partitions} * base_classifier_complexity(n_classes = n_label_combinations_per_partition))``\n",
+    "\n",
+    "Randomly partitions the label space and trains a base classifier per partition with a base multi-class classifier.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "\n",
+    "- accomodates to different types of problems\n",
+    "- infers when to divide into subproblems or not and decide when to use less classifiers than Binary Relevance\n",
+    "- scalable to data sets with large numbers of labels\n",
+    "- generalizes label relations well while not underfitting like LabelPowerset\n",
+    "- does not require parameter estimation \n",
+    "\n",
+    "**Weak sides**: \n",
+    "\n",
+    "- requires label relationships present in training data to be representable of the problem\n",
+    "- partitioning may prevent certain label combinations from being correctly classified, depends on base classifier\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "<dt>[MajorityVotingClassifier](api/skmultilearn.ensemble.voting.html#skmultilearn.ensemble.MajorityVotingClassifier)</dt>\n",
+    "<dd>\n",
+    "\n",
+    "**Parameter estimation needed**:  Only base classifier\n",
+    "**Complexity**: ``O(n_{clusters} * base_classifier_complexity(n_classes = n_label_combinations_per_cluster))``\n",
+    "\n",
+    "Uses clustering methods to divide the label space into subspaces (possibly overlapping) and trains a base classifier per partition with a base multi-class classifier, labels are assigned based on voting.\n",
+    "\n",
+    "**Strong sides**: \n",
+    "\n",
+    "- accomodates to different types of problems\n",
+    "- infers when to divide into subproblems or not and decide when to use less classifiers than Binary Relevance\n",
+    "- scalable to data sets with large numbers of labels\n",
+    "- generalizes label relations well while not underfitting like LabelPowerset\n",
+    "- does not require parameter estimation \n",
+    "\n",
+    "**Weak sides**: \n",
+    "\n",
+    "- requires label relationships present in training data to be representable of the problem\n",
+    "\n",
+    "</dd>\n",
+    "\n",
+    "</dl>\n"
    ]
   },
   {
