--- a/docs/source/multilabelembeddings.ipynb
+++ b/docs/source/multilabelembeddings.ipynb
@@ -64,6 +64,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![ ](_static/lnemlc.png)\n",
+    "\n",
     "For an example we will use the LINE embedding method, one of the most efficient and well-performing state of the art approaches, for the meaning of parameters consult the [OpenNE documentation](). We select `order = 3` which means that the method will take both first and second order proximities between labels for embedding. We select a dimension of 5 times the number of labels, as the linear embeddings tend to need more dimensions for best performance, normalize the label weights to maintain normalized distances in the network and agregate label embedings per sample by summation which is a classical approach."
    ]
   },
