--- a/tests/MekaTestingMLkNN.ipynb
+++ b/tests/MekaTestingMLkNN.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,43 +20,15 @@
     "\n",
     "from skmultilearn.ext import Meka,download_meka\n",
     "from skmultilearn.dataset import load_dataset\n",
-    "from skmultilearn.ensemble import RakelD\n",
+    "from skmultilearn.adapt import MLkNN\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import hamming_loss,accuracy_score,f1_score\n",
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.metrics import hamming_loss,accuracy_score,f1_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SEED=42"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(SEED)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NUM_LABELS=3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,11 +62,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.33,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1612, 294), (795, 294), (1612, 6), (795, 6))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape,X_test.shape,Y_train.shape,Y_test.shape"
    ]
   },
   {
@@ -112,13 +104,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The default number of neighbours for Mulan MLkNN is 10 [source](https://github.com/tsoumakas/mulan/blob/master/mulan/src/main/java/mulan/classifier/lazy/MultiLabelKNN.java#L80)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "meka = Meka(\n",
-    "    meka_classifier=\"meka.classifiers.multilabel.RAkELd -k {} -S {}\".format(NUM_LABELS,SEED),\n",
+    "    meka_classifier=\"meka.classifiers.multilabel.MULAN -S MLkNN\",\n",
     "    weka_classifier=\"weka.classifiers.bayes.NaiveBayes\",\n",
     "    meka_classpath=path_to_meka,\n",
     "    java_command='/usr/bin/java'\n",
@@ -127,27 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.73 s, sys: 72 ms, total: 2.8 s\n",
-      "Wall time: 3.92 s\n"
+      "CPU times: user 2.83 s, sys: 96 ms, total: 2.92 s\n",
+      "Wall time: 8.69 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "Meka(java_command='/usr/bin/java',\n",
-       "   meka_classifier='meka.classifiers.multilabel.RAkELd -k 3 -S 42',\n",
+       "   meka_classifier='meka.classifiers.multilabel.MULAN -S MLkNN',\n",
        "   meka_classpath='/home/felipe/scikit_ml_learn_data/meka/meka-release-1.9.2/lib/',\n",
        "   weka_classifier='weka.classifiers.bayes.NaiveBayes')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,15 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.33 s, sys: 44 ms, total: 1.38 s\n",
-      "Wall time: 3.28 s\n"
+      "CPU times: user 1.41 s, sys: 48 ms, total: 1.46 s\n",
+      "Wall time: 6.44 s\n"
      ]
     }
    ],
@@ -184,47 +185,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> default value for label size in Mulan RakelD is 3 [source](https://github.com/tsoumakas/mulan/blob/f56e8148812dde357178a053cb09877515b538ad/mulan/src/main/java/mulan/classifier/meta/RAkELd.java#L75)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 88 ms, sys: 4 ms, total: 92 ms\n",
-      "Wall time: 89.9 ms\n"
+      "CPU times: user 2.43 s, sys: 8 ms, total: 2.44 s\n",
+      "Wall time: 2.43 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "skml = RakelD(\n",
-    "    base_classifier=GaussianNB(),\n",
-    "    labelset_size=NUM_LABELS)\n",
+    "skml = MLkNN(k=10)\n",
     "skml.fit(X_train, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 140 ms, sys: 0 ns, total: 140 ms\n",
-      "Wall time: 135 ms\n"
+      "CPU times: user 1.34 s, sys: 12 ms, total: 1.36 s\n",
+      "Wall time: 1.32 s\n"
      ]
     }
    ],
@@ -242,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +241,7 @@
        "((795, 6), (795, 6))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "441"
+       "676"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -301,19 +291,19 @@
       "False\n",
       "\n",
       "### Pctg of exact matches ###\n",
-      "55.472%\n",
+      "85.031%\n",
       "\n",
       "### Hamming loss ###\n",
-      "SKML: 0.142138\n",
-      "MEKA: 0.167925\n",
+      "SKML: 0.089518\n",
+      "MEKA: 0.092872\n",
       "\n",
       "### Accuracy score ###\n",
-      "SKML: 0.437736\n",
-      "MEKA: 0.249057 \n",
+      "SKML: 0.644025\n",
+      "MEKA: 0.633962 \n",
       "\n",
       "### Micro-F1 score ###\n",
-      "SKML: 0.665350\n",
-      "MEKA: 0.626225\n",
+      "SKML: 0.744158\n",
+      "MEKA: 0.742292\n",
       "\n"
      ]
     }
