Fix syntax error in tutorial

--- a/docs/source/tutorial.ipynb
+++ b/docs/source/tutorial.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "clf.classifiers"
+    "clf.classifiers_"
    ]
   },
   {
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "clf.classifiers"
+    "clf.classifiers_"
    ]
   },
   {
