--- a/docs/source/stratification.ipynb
+++ b/docs/source/stratification.ipynb
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train, X_test, y_test = iterative_train_test_split(X, y, test_size = 0.5)"
+    "X_train, X_test, y_train, y_test = iterative_train_test_split(X, y, test_size = 0.5)"
    ]
   },
   {
