--- a/docs/source/labelrelations.ipynb
+++ b/docs/source/labelrelations.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.cluster import LabelCooccurrenceGraphBuilder"
+    "from skmultilearn.cluster.networkx import NetworkXLabelGraphClusterer"
    ]
   },
   {
